border validation done, also trimming top and bottom of the map done

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
-// why if i give dir to open it works
-// make tab to 4 spaces
-// lst -> array
-// not only checkhorisontal closing, but also vertical
+// why if i give dir to open it works?
+// make tab to 4 spaces   DONE
+// lst -> array    DONE
+// not only checkhorisontal closing, but also vertical   DONE
 // I'll do this, dont worry, be happy
+
+// is the map/map.cub valid?
