--- a/TODO
+++ b/TODO
@@ -1,7 +1,9 @@
-// why if i give dir to open it works?
+// why if i give dir to open it works?   DONE
 // make tab to 4 spaces   DONE
 // lst -> array    DONE
 // not only checkhorisontal closing, but also vertical   DONE
 // I'll do this, dont worry, be happy
 
-// is the map/map.cub valid?
+// is the map/map.cub valid?    YES DONE
+
+// check for F and C types
